# defl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: test.yml
cmake/: deflConfig.cmake.in
defl.xcodeproj/: project.pbxproj
defl.xcodeproj/xcuserdata/recp.xcuserdatad/xcschemes/: xcschememanagement.plist
include/defl/: common.h  defl.h  infl.h  version.h
src/: common.h  mem.c
src/infl/: apicommon.h  infl.c  mem.c  stream.c  zlib.h
src/zlib/: zlib.h
test/: CMakeLists.txt  test_files.c  test_fuzz.c
test/data/: gendata.py
test/data/compressed/: almost_max_block  alternating_64k  ascii  backref_128  backref_16  backref_2  backref_256  backref_32  backref_4  backref_512  backref_64  backref_8  base64_like  binary_pattern  bit_align_15  bit_align_17  bit_align_2  bit_align_7  bit_align_9  c_source  compress_excellent  compress_good  compress_poor  css_content  csv_data  distance_1  distance_32768  distance_test  distance_test_1024  distance_test_128  distance_test_16  distance_test_2048  distance_test_256  distance_test_3  distance_test_32  distance_test_4096  distance_test_512  distance_test_64  distance_test_8  distance_test_8192  (+84 more)
test/data/raw/: backref_128  backref_16  backref_2  backref_256  backref_32  backref_4  backref_512  backref_64  backref_8  base64_like  binary_pattern  c_source  compress_poor  css_content  csv_data  distance_32768  distance_test  distance_test_1  distance_test_1024  distance_test_128  distance_test_16  distance_test_2048  distance_test_256  distance_test_32  distance_test_4096  distance_test_512  distance_test_64  distance_test_8  distance_test_8192  dynamic_huffman_2  edge_max_uncompressed  edge_single_then_repeat  html  http_headers  huffman_ab_pattern  huffman_skewed  huffman_two_symbols  json  large_text_64k  length_test_10  (+50 more)
